--- a/main.html
+++ b/main.html
@@ -1,6 +1,13 @@
 <html>
   <h1>This is my fun game</h1>
   <script>
-  console.log('testing');
+  var number = 10;
+  while (true){
+    var response = prompt("Guess the number I'm thinking of!");
+    if (response == number){
+        announce('you win!');
+    	break;
+    }
+  }
   </script>
 </html>
