fixed bug announcing win

--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   while (true){
     var response = prompt("Guess the number I'm thinking of!");
     if (response == number){
-        announce('you win!');
+        alert('you win!');
     	break;
     }
   }
