Made game harder - random now!

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
   <h1>This is my fun game</h1>
   <script>
-  var number = 10;
+  var number = Math.ceil(Math.random()*10);
   while (true){
     var response = prompt("Guess the number I'm thinking of!");
     if (response == number){
