Changed background to gray and header to blue

--- a/main.html
+++ b/main.html
@@ -1,4 +1,8 @@
 <html>
+  <style>
+  h1 {color: blue;}
+  html {background: gray;}
+  </style>
   <h1>This is my fun game</h1>
   <script>
   var number = Math.ceil(Math.random()*10);
