--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
   <style>
-  h1 {color: blue;}
-  html {background: gray;}
+  h1 {color: #1f0d87;}
+  html {background: #eadede;}
   </style>
   <h1>This is my fun game</h1>
   <script>
