switched "alert" to "confirm" for messages

--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
     	break;
     }
     if (response > number){
-        alert('too HIGH');
+        confirm('too HIGH');
     }
     if (response > number){
-        alert('TOO low.');
+        confirm('TOO low.');
     }
   }
   </script>
