switched greater than to less than

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     if (response > number){
         confirm('too HIGH');
     }
-    if (response > number){
+    if (response < number){
         confirm('TOO low.');
     }
   }
